# ics-sim-anomaly-detection

./: .gitignore  01_eda_analysis.py  02_replay_detection.py  03_pcap_inspection.py  04_unlabeled_clustering_bedrock.py  05_attack_classifier.py  06_streaming_anomaly.py  07_cross_layer_classifier.py  08_mitl_constraint_layer.py  09_hai_mitl.py  10_bedrock_ablation.py  README.md  ics_sim_ml_blind_spot.ipynb  mitl_paper.tex  pyproject.toml  requirements.txt
data/: traffic.pcap
mitl/datasets/: hai.py
mitl/extract/: bedrock.py
outputs/attack_classifier/: model_card.json  model_comparison.csv
outputs/bedrock_ablation/: ablation_card.json
outputs/cross_layer/: model_card.json  recall_delta_table.csv
outputs/hai_mitl/: hai_comparison.csv  model_card.json  violations.csv
outputs/mitl_constraint/: attack_window_scores.csv  constraint_violations.csv  method_comparison.csv  mitl_per_attack_summary.csv  model_card.json
outputs/streaming_anomaly/: alerts.csv  detection_scores.csv  detection_summary.csv  pipeline_summary.json
outputs/unlabeled_clustering/: eda_null_audit.csv  eda_skew_inventory.csv
